--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="#aeeee9"
-                app:titleTextColor="#000000" />
+                app:titleTextColor="#9A1F1F" />
 
 
         </com.google.android.material.appbar.AppBarLayout>
